--- a/hello.ipynb
+++ b/hello.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORV7AALYhruNhTQ7rIFZ7c",
+      "authorship_tag": "ABX9TyOg4uRORelSr1CzqrQXpaWd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,26 +28,74 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "source": [
+        "pip install pandas"
+      ],
+      "metadata": {
+        "id": "H9fiAbUATsE0",
+        "outputId": "31cdfb06-38c4-48b6-eeee-527ff6c52cd7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (1.5.3)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2022.7.1)\n",
+            "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.10/dist-packages (from pandas) (1.22.4)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd"
+      ],
+      "metadata": {
+        "id": "O8oK0HmTVLvW"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6QLQW2oILF-F",
-        "outputId": "44a7deda-fc6b-4e9b-bdac-bd496813db26"
+        "outputId": "8c13d0d5-ffc6-40ba-b72c-637e51750213"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello World! Revision 2\n"
+            "Hello World! Revision 3\n"
           ]
         }
       ],
       "source": [
-        "print (\"Hello World! Revision 2\")"
+        "print (\"Hello World! Revision 3\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "s4QlnAX0VRQO"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
